# WillowVox-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: multi-platform-build-test.yml  update-docs.yml
engine/: CMakeLists.txt
engine/assets/: frag.glsl  vert.glsl
engine/dependencies/imgui/: CMakeLists.txt
engine/include/WillowVox/: WillowVox.h
engine/include/WillowVox/core/: Application.h  EntryPoint.h  Logger.h
engine/include/WillowVox/events/: Event.h  EventDispatcher.h  KeyPressEvent.h  KeyReleaseEvent.h  MouseClickEvent.h  MouseMoveEvent.h  MouseReleaseEvent.h  MouseScrollEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
engine/include/WillowVox/math/: Noise.h  NoiseSettings.h
engine/include/WillowVox/physics/: Physics.h
engine/include/WillowVox/rendering/: BaseMaterial.h  BaseVertex.h  Camera.h  Mesh.h  MeshRenderer.h  RenderingAPI.h  Shader.h  Texture.h  Window.h
engine/include/WillowVox/rendering/engine-default/: ChunkFluidMaterial.h  ChunkSolidMaterial.h  ChunkVertex.h  FluidVertex.h  RawTriMaterial.h  TextureMaterial.h  Vertex.h
engine/include/WillowVox/rendering/opengl/: OpenGLAPI.h  OpenGLMesh.h  OpenGLShader.h  OpenGLTexture.h  OpenGLWindow.h
engine/include/WillowVox/resources/: Block.h  Blocks.h
engine/include/WillowVox/world/: Chunk.h  ChunkData.h  ChunkManager.h  NoiseWorldGen.h  TerrainGen.h  World.h  WorldGen.h
engine/include/WillowVoxEngine/: Version.h  Version.h.in  WillowVox.h
engine/include/WillowVoxEngine/Application/: Application.h  EntryPoint.h  Window.h
engine/include/WillowVoxEngine/Core/: Logger.h
engine/include/WillowVoxEngine/Events/: Event.h  EventDispatcher.h  KeyPressEvent.h  KeyReleaseEvent.h  MouseClickEvent.h  MouseMoveEvent.h  MouseReleaseEvent.h  MouseScrollEvent.h  WindowCloseEvent.h  WindowEvents.h  WindowResizeEvent.h
engine/include/WillowVoxEngine/Input/: Input.h  Key.h
engine/include/WillowVoxEngine/Math/: Noise.h  Vec2.h  Vec3.h  ivec3Hash.h
engine/include/WillowVoxEngine/Physics/: Physics.h
engine/include/WillowVoxEngine/Rendering/: BMesh.h  Camera.h  Mesh.h  MeshRenderer.h  OpenGLGraphicsAPI.h  Shader.h  Texture.h  Vertex.h
engine/include/WillowVoxEngine/Resources/: Block.h  Blocks.h
engine/include/WillowVoxEngine/World/: BillboardVertex.h  Chunk.h  ChunkData.h  ChunkManager.h  ChunkVertex.h  Component.h  FluidVertex.h  GameObject.h  TerrainGen.h  World.h  WorldGen.h
engine/src/Application/: Application.cpp  Window.cpp
engine/src/Core/: Logger.cpp
engine/src/Events/: EventDispatcher.cpp
engine/src/Input/: Input.cpp
engine/src/Math/: Noise.cpp
engine/src/Physics/: Physics.cpp
engine/src/Rendering/: Camera.cpp  Mesh.cpp  MeshRenderer.cpp  OpenGLGraphicsAPI.cpp  Shader.cpp  Texture.cpp
engine/src/Resources/: Blocks.cpp
engine/src/World/: Chunk.cpp  ChunkManager.cpp  GameObject.cpp  TerrainGen.cpp  World.cpp
engine/src/core/: Application.cpp  Logger.cpp
engine/src/math/: Noise.cpp
engine/src/rendering/: BaseMaterial.cpp  RenderingAPI.cpp  Window.cpp
engine/src/rendering/engine-default/: ChunkFluidMaterial.cpp  ChunkSolidMaterial.cpp  RawTriMaterial.cpp  TextureMaterial.cpp
engine/src/rendering/opengl/: OpenGLAPI.cpp  OpenGLMesh.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLWindow.cpp
engine/src/world/: ChunkManager.cpp  NoiseWorldGen.cpp  World.cpp
test/: CMakeLists.txt
test/assets/: chunk_billboard_frag.glsl  chunk_fluid_vert.glsl  chunk_frag.glsl  chunk_solid_frag.glsl  chunk_vert.glsl  vert.glsl
test/assets/shaders/chunk-shaders/: chunk_solid_frag.glsl
test/assets/shaders/post-processing/: framebuffer_frag.glsl  test_frag.glsl
test/include/: PlayerController.h  TestGame.h  TestWorld.h
test/src/: PlayerController.cpp  main.cpp
